# gamepowers

./: .gitignore  README.md  pyproject.toml
.codex/: INSTALL.md
docs/gamepowers/: README.md
docs/plans/: 2026-02-13-gamepowers-cli-design.md  2026-02-13-gamepowers-cli-implementation.md  2026-02-13-gamepowers-design.md  2026-02-13-gamepowers-implementation.md  2026-02-13-gamepowers-skill-hardening-design.md  2026-02-13-gamepowers-skill-hardening-implementation.md  2026-02-13-superpowers-handoff-implementation-plan.md
gamepowers_cli/: __init__.py  cli.py
gamepowers_cli/commands/: __init__.py  handoff_cmd.py  pipeline_cmd.py  sync_cmd.py  validate_cmd.py
gamepowers_cli/core/: __init__.py  bd_sync.py  handoff.py  task_map.py
skills/anti-cheat-and-exploit-review/: SKILL.md
skills/balance-framework/: SKILL.md
skills/combat-and-roles-designer/: SKILL.md
skills/content-pipeline-planner/: SKILL.md
skills/core-loop-architect/: SKILL.md
skills/design-handoff-to-superpowers/: SKILL.md
skills/economy-model-designer/: SKILL.md
skills/ecs-architecture-designer/: SKILL.md
skills/game-design-orchestrator/: SKILL.md
skills/game-vision-alignment/: SKILL.md
skills/liveops-event-designer/: SKILL.md
skills/mechanic-spec-writer/: SKILL.md
skills/progression-structure-designer/: SKILL.md
skills/telemetry-kpi-designer/: SKILL.md
tests/: test_cli_commands.py  test_sync_tasks_to_bd.py  test_validate_skills_contract.py  test_validate_task_map.py
tools/: install_all.sh  sync_tasks_to_bd.py  validate_skills_contract.py  validate_task_map.py
(+39 files in other folders)
