[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamepowers"
version = "0.1.0"
description = "GamePowers CLI toolkit for game design task orchestration with ECS constraints"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GamePowers" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
gamepowers = "gamepowers_cli.cli:main"

[tool.setuptools]
packages = ["gamepowers_cli", "gamepowers_cli.core", "gamepowers_cli.commands"]
